--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@jiaminghi/data-view",
-  "version": "2.10.0",
-  "author": "JiaMing <743192023@qq.com>",
+  "name": "bigScreenV",
+  "version": "1.0.0",
+  "author": "mengtao <2726653264@qq.com>",
   "description": "Vue Large screen data display component library",
   "main": "lib/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/DataV-Team/DataV.git"
+    "url": "https://github.com/jack12345666/DataV.git"
   },
   "scripts": {
     "build": "node build/index.js",
@@ -16,7 +16,7 @@
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/DataV-Team/DataV/issues"
+    "url": "hhttps://github.com/jack12345666/DataV/issues"
   },
   "keywords": [
     "vue",
@@ -28,7 +28,7 @@
     "@jiaminghi/charts": "*",
     "@babel/runtime": "^7.5.5"
   },
-  "homepage": "https://github.com/DataV-Team/DataV#readme",
+  "homepage": "",
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
