--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "bigScreenV",
-  "version": "1.0.0",
+  "name": "bigscreenv",
+  "version": "1.0.1",
   "author": "mengtao <2726653264@qq.com>",
   "description": "Vue Large screen data display component library",
   "main": "lib/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jack12345666/DataV.git"
+    "url": "git+https://github.com/jack12345666/DataV.git"
   },
   "scripts": {
     "build": "node build/index.js",
@@ -28,7 +28,7 @@
     "@jiaminghi/charts": "*",
     "@babel/runtime": "^7.5.5"
   },
-  "homepage": "",
+  "homepage": "https://github.com/jack12345666/DataV#readme",
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
@@ -42,5 +42,8 @@
     "rollup-plugin-terser": "^5.1.1",
     "rollup-plugin-vue": "^5.0.1",
     "vue-template-compiler": "^2.6.10"
+  },
+  "directories": {
+    "lib": "lib"
   }
 }
